# azure-ai

./: .gitignore  README.md  pyproject.toml
agent/rag-agent/: 05-semantic-kernel-azure-ai-agent.ipynb
