[tool.poetry]
name = "azure-ai"
version = "0.1.0"
description = ""
authors = ["Yohei Fukuhara <yfukuhara@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-ai-projects = "^1.0.0b10"
semantic-kernel = "^1.29.0"
azure-identity = "^1.21.0"
jupyterlab = "^4.4.1"
azure-ai-inference = "^1.0.0b9"
python-dotenv = "^1.1.0"
azure-monitor-opentelemetry = "^1.6.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
